<?xml version="1.0"?>
<package format="2">
  <name>moveit_ros_grasp</name>
  <version>0.0.0</version>
  <description>The moveit_ros_grasp package</description>
  <maintainer email="supratmanjoshua@gmail.com">Joshua Supratman</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>moveit_grasps</build_depend>
  <build_depend>moveit_grasps_filter</build_depend>

  <build_export_depend>moveit_grasps</build_export_depend>
  <build_export_depend>moveit_grasps_filter</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_grasps</exec_depend>
  <exec_depend>moveit_grasps_filter</exec_depend>

  <export>
    <moveit_ros_move_group plugin="${prefix}/grasp_capability_plugin_description.xml"/>
  </export>

</package>
